--- a/4.html
+++ b/4.html
@@ -6,9 +6,9 @@
   <meta charset="utf-8">
  </head>
  
-  <body>
+ <body>
   <h1>불안장애와 마주치다</h1>
-    <ol style="margin-top:50px;">
+   <ol style="margin-top:50px;">
      <li><a href="index.html">불안장애에 대한 인식</a></li>
      <li><a href="1.html">일반적인 불안장애의 원인과 처방</a></li>
      <li><a href="2.html">불안장애 현실</a></li>
@@ -148,10 +148,10 @@
        - 작자 미상<br>
    -------------------------------------------------------------------------------------------<br>
    </p>
- </body>
   <br><br><br><br>
   <a href="index.html">타이틀로 돌아가기</a>
   <br><br>
-  <a href="reference.html">참고문헌 리스트</a>
+  <a href="reference.html" target="_blank">참고문헌 리스트</a>
   <br><br><br><br>
+ </body>
 </html>
